[gd_scene load_steps=2 format=3]

[ext_resource path="res://scenes/ui/shop/ShopMenu.gd" type="Script" id=1]

[node name="ShopMenu" type="Control"]
script = ExtResource( 1 )

[node name="ShopPanel" type="Panel" parent="."]
[node name="ShopGrid" type="GridContainer" parent="ShopPanel"]
columns = 3

[node name="PlayerPanel" type="Panel" parent="."]
[node name="PlayerGrid" type="GridContainer" parent="PlayerPanel"]
columns = 3

[node name="GoldLabel" type="Label" parent="."]
[node name="ShopkeeperLabel" type="Label" parent="."]
[node name="CloseButton" type="Button" parent="."]
text = "Close"
